2012-11-24  Per Bothner  <per@bothner.com>

	* CharArrayOutPort.java (writeTo(Consumer)): Call 3-parameter writeTo.
	(toString): Implement using toSubString.

2012-11-22  Per Bothner  <per@bothner.com>

	* BinaryOutPort.java: New class, extends OutPort.
	* Makefile.am: Update accordingly.
	* OutPort.java (openFile): New overload.
	Return BinaryOutPort if conv is FALSE.

2012-07-02  Per Bothner  <per@bothner.com>

	* Namespace.java: Reimplement to extend AbstractHashTable - and
	thus implement java.util.Map<String,Symbol>.

2012-06-27  Per Bothner  <per@bothner.com>

	* Namespace.java (class SymbolRef): Implement Map.Entry<String,Symbol>.

2012-06-26  Per Bothner  <per@bothner.com>

	* Location.java: Change to parameterized class.
	* NamedLocation.java: Update accordingly.
	* IndirectableLocation.java: Update accordingly.
	* PlainLocation.java: Update accordingly.
	* ProcLocation.java: Update accordingly.
	* ThreadLocation.java: Update accordingly.
	* PropertyLocation.java: Update accordingly.
	* SharedLocation.java: Update accordingly.
	* ConstrainedLocation.java: Update accordingly.

2012-05-20  Per Bothner  <per@bothner.com>

	* SimpleEnvironment.java (newLocation): Make protected.

	* NamedLocation.java: Add generic parameter to supertype.
	(getKey): Fix return type to match.

2012-01-31  Per Bothner  <per@bothner.com>

	* Lazy.java: Note that getValue is allowed to return this.
	* Promise.java (force): Handle case of getValue returning this.

2012-01-27  Per Bothner  <per@bothner.com>

	* Promise.java (isBlank): New method.
	(checkUnset): Rename to checkBlank.
	(setValue, setvalue, setException, setThnk): New methods.
	(getValue): Changes to handle new functionality.
	(print): Add overload.
	(toString): New method.

2012-01-15  Per Bothner  <per@bothner.com>

	* Promise.java: Make final, because moveFrom would be anomolous if
	source or target would be a sub-class of Promise.
	(moveFrom): New method.
	(forceValueIfPromise): New field.